tla2/crates/tla-core/src/snapshots/tla_core__diagnostic__tests__snapshot_multiline_context.snap
---
source: crates/tla-core/src/diagnostic.rs
expression: "render_to_string(&d, \"test.tla\", source)"
---
Error: undefined name: undefined_var
   ╭─[test.tla:6:7]
   │
 6 │     /\ y = undefined_var
   │       ──────┬──────  
   │             ╰──────── 'undefined_var' is not defined
   │ 
   │ Help: Check the spelling, or add a definition for this name
───╯
